# axis

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  conanfile.txt  package-lock.json  package.json  schema.sh
assets/: agent.service  agent.toml  agent.yml  log4rs.yml  master.service  master.toml  master.yml
demo/.ssh/: staging  staging.pub
demo/jobs/: ping.json  ping.toml
demo/jobs/scripts/: hi.hbs
demo/roles/: ping.toml
demo/staging/: all.toml
demo/staging/groups/: nano-pi.toml  web.json  web.toml
demo/staging/hosts/: 192.168.8.20.json  192.168.8.20.toml  192.168.8.21.json  192.168.8.21.toml  192.168.8.22.json  192.168.8.22.toml  all.json  all.toml  localhost.json  localhost.toml
demo/templates/: ping.sh.hbs
jobs/: ping.toml
jobs/scripts/: hi.hbs
scripts/: postinst
src/: agent.rs  app.rs  banner.txt  common.h  crawler.rs  env.h.in  env.rs  errors.rs  key.rs  lib.rs  main.cc  main.rs  master.rs  models.rs  nmap.rs  protocol.rs  shell.rs  task.rs
src/agent/: mod.rs  task.rs
src/controllers/: mod.rs
src/launcher/: mod.rs
src/master/: agents.rs  config.rs  mod.rs
src/orm/: mod.rs  models.rs  schema.rs  up.sql
src/orm/models/: agent.rs  group.rs  log.rs  mod.rs
src/publish/: mod.rs  models.rs
staging/groups/: local.toml
staging/hosts/: 192.168.8.22.toml  192.168.8.23.toml  192.168.8.24.toml  localhost.toml
tests/: agent_payload_test.rs  env_test.rs  group_test.rs  job_test.rs  jobs_test.rs  master_task_test.rs  publish_task_test.rs  role_test.rs
