[package]
name = "axis"
version = "0.2.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A radically simple IT automation platform."
homepage = "https://github.com/saturn-xiv/axis"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
log = "0.4"
log4rs = "0.8"
toml = "0.5"
failure = "0.1"
nix = "0.15"
base64 = "0.10"
tera = "1.0.0-beta.14"
git2 = "0.9"
ssh2 = "0.3"
rocket = "0.4"
sodiumoxide = "0.2"
serde-xml-rs = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
lazy_static = "1"
clap = "2"

[dependencies.uuid]
version = "0.7"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1"
features = ["sqlite", "chrono"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_sqlite_pool", "serve"]
