[package]
name = "axis"
version = "0.3.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A radically simple IT automation platform."
homepage = "https://github.com/saturn-xiv/axis"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
failure = "0.1"
log = "0.4"
toml = "0.5"
env_logger = "0.7"
rand = "0.7"
serde = "1"
serde_derive = "1"
lazy_static = "1"
clap = "2"
handlebars = "3"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]
default-features = false
